# vmt

./: LICENSE  README.md  pyproject.toml
manifests/: alpine-weston.toml  arch-sway.toml  aside-arch-sway.toml  aside-fedora-kde.toml  aside-ubuntu-kde.toml  fedora-gnome.toml
tests/: test_cli.py  test_connect.py  test_manifest.py  test_provision.py  test_screenshot.py  test_vm.py
vmt/: cli.py  connect.py  manifest.py  provision.py  screenshot.py  vm.py
