[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vmt"
version = "0.1.0"
description = "Visual VM testing for Wayland applications"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "libvirt-python>=10.0.0",
    "paramiko>=3.0",
    "scikit-image>=0.22",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["vmt*"]

[project.scripts]
vmt = "vmt.cli:main"
